--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/scripts/main.js",
   "scripts": {
     "lint": "eslint",
-    "start": "node $NODE_DEBUG_OPTION  server.js",
+    "start": "node server.js",
+    "debug": "node $NODE_DEBUG_OPTION  server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
